# coevolve-fs

./: README.md  pyproject.toml  test.py
src/coevolve_fs/: __init__.py  selector.py
src/coevolve_fs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coevolve_fs_nhw.egg-info/: PKG-INFO  SOURCES.txt
