[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coevolve-fs-nhw"
version = "2025.1.0"
description = "A Cooperative Co-evolutionary Genetic Algorithm for feature selection."
readme = "README.md"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "github.com"
