[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "coevolve-fs-nhw"
version = "2025.1.0"
description = "A Cooperative Co-evolutionary Genetic Algorithm for feature selection."
readme = "README.md"
authors = [{name = "Hirusha Wanigasingha", email = "hirushanethni2277@gmail.com"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]
requires-python = ">=3.9"

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Hirusha99/coevolve-fs"
